Add `rewrite` support for `UpgradeToJava17`