@@ -104,7 +104,7 @@ public abstract class AsyncPeriodicWork extends PeriodicWork {
                 long startTime = System.currentTimeMillis();
                 long stopTime;
 
-                LazyTaskListener l = new LazyTaskListener(this::createListener, String.format("Started at %tc", new Date(startTime)));
+                LazyTaskListener l = new LazyTaskListener(this::createListener, "Started at %tc".formatted(new Date(startTime)));
                 try {
                     try (ACLContext ctx = ACL.as2(ACL.SYSTEM2)) {
                         execute(l);
@@ -115,7 +115,7 @@ public abstract class AsyncPeriodicWork extends PeriodicWork {
                     Functions.printStackTrace(e, l.fatalError("aborted"));
                 } finally {
                     stopTime = System.currentTimeMillis();
-                    l.close(String.format("Finished at %tc. %dms", new Date(stopTime), stopTime - startTime));
+                    l.close("Finished at %tc. %dms".formatted(new Date(stopTime), stopTime - startTime));
                 }
 
                 logger.log(Level.FINE, "Finished {0}. {1,number} ms",
