@@ -94,10 +94,10 @@ class InetAddressValidatorTest {
             "2001:0000:1234:0000:0000:C1C0:ABCD:0876%abc%defgh", // '%' in node id
             };
         for (String item : valid) {
-            assertTrue(validator.isValid(item), String.format("%s should be valid", item));
+            assertTrue(validator.isValid(item), "%s should be valid".formatted(item));
         }
         for (String item : invalid) {
-            assertFalse(validator.isValid(item), String.format("%s should be invalid", item));
+            assertFalse(validator.isValid(item), "%s should be invalid".formatted(item));
         }
     }
 
