@@ -229,7 +229,7 @@ class ComputerTest {
 
         JenkinsRule.WebClient wc = j.createWebClient();
         wc.login(CONFIGURATOR);
-        WebRequest req = new WebRequest(wc.createCrumbedUrl(String.format("%s/config.xml", computer.getUrl())), HttpMethod.POST);
+        WebRequest req = new WebRequest(wc.createCrumbedUrl("%s/config.xml".formatted(computer.getUrl())), HttpMethod.POST);
         req.setAdditionalHeader("Content-Type", "application/xml");
         req.setRequestBody(VALID_XML_BAD_FIELD_USER_XML);
 
